# TooManySessions

./: pyproject.toml
src/toomanysessions/: __init__.py  core.py  email signature.html  login_success.html  msft_graph_api.py  msft_oauth.py  oauth.py  passkey.py  popup.html  sessions.py  users.py  welcome.html
src/toomanysessions/templates/: login_success.html  prompt_for_passkey.html  redirect.html  unauthorized.html  user.html
tests/: __init__.py  test_core.py
