[project]
name = "toomanysessions"
version = "0.1.0"
description = ""
authors = [
    {name = "genderlesspit",email = "59433707+genderlesspit@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "toomanythreads (>=0.2.3,<0.3.0)"
]

[tool.poetry]
packages = [{include = "toomanysessions", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
